[gd_scene load_steps=9 format=3 uid="uid://fp2liou0434s"]

[ext_resource type="Script" path="res://player.gd" id="1_l7leg"]
[ext_resource type="Texture2D" uid="uid://df07xu8s14hx2" path="res://pbulletBlank.png" id="1_qf8q5"]
[ext_resource type="Texture2D" uid="uid://ctqr5gwmsbkfj" path="res://face.png" id="2_pcq78"]
[ext_resource type="Texture2D" uid="uid://c3qoegoafcn0m" path="res://chargeBorder.png" id="5_pewfb"]
[ext_resource type="Texture2D" uid="uid://b2gktit4wpkd3" path="res://chargeColor.png" id="6_r8k00"]

[sub_resource type="SpriteFrames" id="SpriteFrames_gp7kr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_qf8q5")
}],
"loop": true,
"name": &"bullet",
"speed": 5.0
}]

[sub_resource type="Curve" id="Curve_14jap"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.797753, 0.802198), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ffllv"]
radius = 5.0
height = 12.0

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_l7leg")

[node name="bullet" type="AnimatedSprite2D" parent="."]
rotation = 6.28319
sprite_frames = SubResource("SpriteFrames_gp7kr")
animation = &"bullet"
offset = Vector2(1.5, -2.5)

[node name="direction" type="Marker2D" parent="bullet"]
position = Vector2(-6.25293e-05, -14)

[node name="blastEffect" type="CPUParticles2D" parent="bullet"]
show_behind_parent = true
emitting = false
amount = 24
lifetime = 0.2
one_shot = true
explosiveness = 0.8
lifetime_randomness = 0.3
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 60.0
initial_velocity_max = 100.0
angular_velocity_min = -100.0
angular_velocity_max = 100.0
linear_accel_min = 14.84
linear_accel_max = 14.84
scale_amount_max = 1.5
scale_amount_curve = SubResource("Curve_14jap")

[node name="face" type="Sprite2D" parent="."]
texture = ExtResource("2_pcq78")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ffllv")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="damage" type="RichTextLabel" parent="."]
offset_left = -42.0
offset_top = -15.0
offset_right = -2.0
offset_bottom = 25.0

[node name="chargeMeter" type="Sprite2D" parent="."]
position = Vector2(0, -32)
texture = ExtResource("5_pewfb")
offset = Vector2(0, 0.5)

[node name="mask" type="Sprite2D" parent="chargeMeter"]
clip_children = 1
texture = ExtResource("6_r8k00")
offset = Vector2(0, 21.5)

[node name="ChargeColor" type="Sprite2D" parent="chargeMeter/mask"]
texture = ExtResource("6_r8k00")
offset = Vector2(0, 0.5)

[node name="blastTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[connection signal="timeout" from="blastTimer" to="." method="_on_blast_timer_timeout"]
